# NautilOS

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config
acpi/: Cargo.toml
acpi/src/: lib.rs
acpi/src/devices/: mod.rs
acpi/src/devices/acpi_defined/nvdimm/: device_handle.rs  mod.rs
efi/: Cargo.toml
efi/src/: common.rs  configuration_table.rs  guid.rs  guids.rs  lib.rs  status.rs  system_table.rs  table_header.rs  types.rs  utilities.rs  variables.rs
efi/src/boot_services/: mod.rs  structs.rs  types.rs
efi/src/boot_services/v1_0/: event_and_timer.rs  image.rs  layout.rs  memory.rs  miscellaneous.rs  mod.rs  protocol_handler.rs  task_priority.rs
efi/src/boot_services/v1_0/event_and_timer/: enums.rs  structs.rs  types.rs
efi/src/boot_services/v1_0/image/: structs.rs
efi/src/configuration_table/: structs.rs
efi/src/protocols/: mod.rs
efi/src/protocols/console/: mod.rs  simple_text_input_protocol.rs  simple_text_output_protocol.rs
efi/src/protocols/device_path/: mod.rs
efi/src/protocols/media/: block_io.rs  disk_io.rs  mod.rs
efi/src/runtime_services/: mod.rs  structs.rs
efi/src/runtime_services/v1_0/: layout.rs  miscellaneous.rs  mod.rs  time.rs  variable.rs  virtual_memory.rs
efi/src/structures/: load_option.rs  mod.rs
efi_interops/: Cargo.toml
efi_interops/src/: efi_object.rs  lib.rs  types.rs
efi_interops/src/traits/: configuration_table.rs  conversion.rs  mod.rs
native/: Cargo.toml
native/native_macros/: Cargo.toml
native/native_macros/src/: lib.rs
native/src/: lib.rs  macros.rs  memory_c.rs  result.rs
native/src/features/: detection.rs  mod.rs  simd64.rs  state_storing.rs
native/src/features/detection/: state_storing.rs
native/src/features/detection/simd/: simd128.rs  simd64.rs
native/src/input_output/: mod.rs  port_mapped.rs
nautilos/: Cargo.toml
nautilos-allocator/: Cargo.toml
nautilos-allocator/src/: heap.rs  heap_error.rs  lib.rs  list.rs  memory_range.rs  sorted_list.rs
nautilos-allocator/src/alloc_impl/: core_mutex.rs  mod.rs
nautilos-allocator/src/heap/: alloc.rs  dealloc.rs  defragment.rs  find_best_fit.rs  find_range_from_address.rs  fold_elements.rs  list_debug_formatter.rs  realloc.rs  reallocate_self.rs  zero_out.rs
nautilos-allocator/src/heap/init_in_place/: initialization_error.rs  mod.rs  split_memory.rs  static_assert.rs
nautilos-async/: Cargo.toml
nautilos-async/src/: lib.rs
nautilos-loader/: Cargo.toml
nautilos-loader/src/: defs.rs  efi_defs.rs  helpers.rs  macros.rs  main.rs  panic.rs  panic_handling.rs
nautilos/src/: main.rs  panic.rs
tests/: Cargo.toml
tests/src/: lib.rs
utf16-str/: Cargo.toml
utf16-str/src/: lib.rs
utf16-utils/: Cargo.toml
utf16-utils/macros/: Cargo.toml
utf16-utils/macros/src/: lib.rs
utf16-utils/src/: lib.rs
(+76 files in other folders)
