[workspace]
members = [
	"acpi",
	"efi",
	"efi_interops",
	"native",
	"native/native_macros",
	"nautilos-async",
	"nautilos-loader",
	"nautilos-allocator",
	"utf16-utils",
]

[profile.bench]
panic = "abort"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"

[profile.test]
panic = "abort"
