[package]
name = "native"
version = "0.1.0"
authors = ["Kiril Mihaylov <Kiril195@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[features]
memory_c = []
kernel_mode = []

[dependencies.native_macros]
path = "native_macros"
