[package]
name = "nautilos-loader"
version = "0.1.0"
authors = ["Kiril Mihaylov <Kiril195@hotmail.com>"]
edition = "2018"

[[bin]]
name = "nautilos-loader"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[dependencies.native]
path = "../native"
features = [
	"memory_c",
]

[dependencies.acpi]
path = "../acpi"
features = [
	"efi_interops",
]

[dependencies.efi]
path = "../efi"
