[package]
name = "nautilos-loader"
version = "0.1.0"
authors = ["Kiril Mihaylov <Kiril195@hotmail.com>"]
edition = "2018"

[[bin]]
name = "nautilos-loader"

[package.metadata.docs.rs]
all-features = true

[dependencies.utf16-utils]
path = "../utf16-utils"

[dependencies.native]
path = "../native"
features = [
	"memory_c",
	"kernel_mode",
]

[dependencies.acpi]
path = "../acpi"
features = [
	"efi_interops",
]

[dependencies.efi]
path = "../efi"
