[package]
name = "nautilos-loader"
version = "0.1.0"
authors = ["Kiril Mihaylov <Kiril195@hotmail.com>"]
edition = "2018"

[[bin]]
name = "nautilos-loader"

[package.metadata.docs.rs]
all-features = true

[dependencies]
acpi = { path = "../acpi", features = ["efi_interops"] }
efi = { path = "../efi" }
native = { path = "../native", features = ["kernel_mode"] }
nautilos-allocator = { path = "../nautilos-allocator", features = ["alloc_impl"] }
utf16-utils = { path = "../utf16-utils" }
